# server_vitals_monitor

./: .gitignore  README.md  config.example.toml  install.py  install_plotter.py  install_service.py  main.py  monitor.py  pyproject.toml
.github/workflows/: ci.yml
data/: server_logs_2025-12-20.csv
src/install_scripts/: install_cli.py  install_monitor.py  install_plotter.py  install_service.py
src/server_monitor/: analyze_monitor.R  config_loader.py  daily_job.py  monitor.py  plot_daily.py  reporter.py  task_guard.py
tests/: test_smoke.py
