[project]
name = "server-vitals-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "psutil>=7.1.3",
]

[dependency-groups]
dev = [
    "commitizen>=4.10.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "$version"
version_files = [
    "pyproject.toml:version",
]
