[project]
name = "server-vitals-monitor"
version = "1.0.0"
description = "A server vitals monitor"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.0",
    "pandas>=2.2.0",
    "psutil>=7.1.3",
]

[project.scripts]
server-monitor = "server_monitor.monitor:main"
task-guard = "server_monitor.task_guard:main"
daily-report = "server_monitor.daily_job:main"

[dependency-groups]
dev = [
    "commitizen>=4.10.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "$version"
version_files = [
    "pyproject.toml:version",
]
